--- a/res/layout/setting_fragment.xml
+++ b/res/layout/setting_fragment.xml
@@ -25,6 +25,7 @@
 			android:layout_width="match_parent"
 			android:textSize="17sp"
 			android:layout_margin="5dp"
+			android:gravity="center_horizontal"
 			android:textColor="@color/white" />
         
         <TextView 
@@ -33,9 +34,20 @@
 			android:layout_width="match_parent"
 			android:textSize="17sp"
 			android:layout_margin="5dp"
+			android:gravity="center_horizontal"
+			
 			android:textColor="@color/white" />
         
     </LinearLayout>
+    
+    
+    <Button
+        android:id="@+id/setting_full_time_button"
+        style="@style/AppButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="@string/setting_full_time_button" />
 
     <Button
         android:id="@+id/setting_logout_button"
