weclome lists empty view

--- a/res/layout/facultet_list_fragment.xml
+++ b/res/layout/facultet_list_fragment.xml
@@ -6,7 +6,13 @@
 
     <ListView
         android:id="@+id/facultetList"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    
+    <include
+        android:id="@+id/facultet_list_empty_view"
+     	layout="@layout/progress_empty_view"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"	/>
 
 </LinearLayout>
