--- a/res/layout/group_list_fargment.xml
+++ b/res/layout/group_list_fargment.xml
@@ -9,5 +9,12 @@
         android:id="@+id/groupList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    
+       
+    <include
+        android:id="@+id/group_list_empty_view"
+     	layout="@layout/progress_empty_view"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"	/>
 
 </LinearLayout>
