welcome sreen redesein

--- a/res/layout/welcome_activity.xml
+++ b/res/layout/welcome_activity.xml
@@ -10,9 +10,18 @@
         style="@style/AppButton"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="164dp"
-        android:text="@string/login_button_caption" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="70dp"
+        android:text="@string/login_button_caption"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/login" />
 
 </RelativeLayout>
