--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,6 +16,7 @@
         <item name="android:background">@drawable/app_button_selector</item>
         <item name="android:textColor">@color/white</item> 
         <item name="android:textSize">20sp</item>
+        <item name="android:padding">10dp</item>
         
     </style>
     
