--- a/res/layout/clap.xml
+++ b/res/layout/clap.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="Заглушка" />
+        android:src="@drawable/rgups_logo" />
 
 </RelativeLayout>
