teacher calendar lesson free fix

--- a/res/layout/simple_list_fragment.xml
+++ b/res/layout/simple_list_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <ListView 
+    <se.emilsjolander.stickylistheaders.StickyListHeadersListView 
 		android:id="@+id/list_fragment_listview"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
