--- a/res/menu/teach.xml
+++ b/res/menu/teach.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    	 xmlns:sabd="http://schemas.android.com/apk/res-auto" >
+      xmlns:sabd="http://schemas.android.com/apk/res-auto" >
       
     <item android:id="@+id/action_search"
     	android:title="@string/search_view_title"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/action_search"
         sabd:showAsAction="always|collapseActionView"
-        sabd:actionViewClass="android.support.v7.widget.SearchView" 
-        android:visible="false"/>
+        sabd:actionViewClass="android.widget.SearchView" />
     
 </menu>
