--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,7 +4,7 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
+    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -19,18 +19,5 @@
         <item name="android:padding">10dp</item>
         
     </style>
-    
-    <!-- Application theme. -->
-    <style name="AppTheme" parent="Theme.Base.AppCompat.Light">
-        <item name="android:background">@android:color/white</item>
-        <item name="android:activatedBackgroundIndicator">@drawable/calendar_selector</item>
-        
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
-    
-     <style name="TwoWayView">
-        <item name="android:orientation">horizontal</item>        
-    </style>
-    
 
 </resources>
