--- a/res/layout/facultet_list_fragment.xml
+++ b/res/layout/facultet_list_fragment.xml
@@ -2,11 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:orientation="vertical">
 
     <ListView
         android:id="@+id/facultetList"
         android:layout_width="match_parent"
+        android:scrollbars="@null"
         android:layout_height="match_parent" />
     
     <include
