--- a/res/layout/group_list_divier.xml
+++ b/res/layout/group_list_divier.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     android:background="@color/theme_blue"
     android:orientation="vertical"
-    android:padding="5dp" >
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:padding="10dp" >
 
     <TextView
         android:id="@+id/levelTitle"
@@ -12,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="1-й курс"
         android:textColor="@color/theme_green"
-        android:textSize="15sp"
+        android:textSize="17sp"
         android:textStyle="bold" />
 
 </LinearLayout>
