--- a/res/layout/lesson_list_divier.xml
+++ b/res/layout/lesson_list_divier.xml
@@ -2,14 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#CC34495E"
-    android:orientation="vertical"
-    android:padding="10dp" >
+    android:background="@color/white"
+    android:orientation="vertical" >
+    <View 
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/theme_blue"/>
 
     <RelativeLayout
         android:id="@+id/RelativeLayout1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:padding="10dp" >
 
         <TextView
             android:id="@+id/divider_text"
@@ -17,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:textColor="@color/theme_green"
+            android:textColor="@color/theme_blue"
             android:textSize="15sp"
             android:textStyle="bold" />
 
@@ -27,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
 			android:layout_alignParentRight="true"
-			android:textColor="@color/theme_green"
+			android:textColor="@color/theme_blue"
             android:textSize="15sp"
             android:textStyle="bold"/>
     </RelativeLayout>
