--- a/res/layout/lesson_list_element.xml
+++ b/res/layout/lesson_list_element.xml
@@ -10,28 +10,6 @@
 	    android:padding="10dp" >
 	
 	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content" >
-	
-	        <ImageView
-	            android:layout_width="21dp"
-	            android:layout_height="21dp"
-	            android:layout_gravity="center_vertical"
-	            android:src="@drawable/ic_time" />
-	
-	        <TextView
-	            android:id="@+id/lesson_time"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_weight="0"
-	            android:layout_gravity="center_vertical"
-	            android:text="8.20-9.50"
-	            android:padding="3dp"
-	            android:textSize="10dp" />
-	
-	    </LinearLayout>
-	
-	    <LinearLayout
 	        android:id="@+id/lesson_room_container"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content" >
@@ -112,6 +90,7 @@
         android:layout_alignParentRight="true"
 		android:layout_centerVertical="true"
         android:layout_marginRight="15dp"
+        android:visibility="gone"
         android:src="@drawable/ic_homerk" />
 
 </RelativeLayout>
