--- a/res/layout/setting_fragment.xml
+++ b/res/layout/setting_fragment.xml
@@ -40,6 +40,23 @@
         
     </LinearLayout>
     
+     <Button
+        android:id="@+id/setting_about"
+        style="@style/AppButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="@string/about" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="17sp"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:text="Расписание" />
     
     <Button
         android:id="@+id/setting_full_time_button"
