--- a/res/drawable/lesson_free_calendar_list_selector.xml
+++ b/res/drawable/lesson_free_calendar_list_selector.xml
@@ -12,9 +12,9 @@
     
     <item android:state_checked="true" android:drawable="@color/theme_green"></item>
     
-    <item android:state_checked="false" android:drawable="@color/red"></item>
+    <item android:state_checked="false" android:drawable="@color/lesson_free"></item>
     
-    <item android:state_activated="false" android:drawable="@color/red"></item>
+    <item android:state_activated="false" android:drawable="@color/lesson_free"></item>
     <item
-     	android:drawable="@color/red" />
+     	android:drawable="@color/lesson_free" />
 </selector>
