--- a/res/layout/homework_list_fragment.xml
+++ b/res/layout/homework_list_fragment.xml
@@ -6,6 +6,7 @@
     
     <se.emilsjolander.stickylistheaders.StickyListHeadersListView
         android:id="@+id/homework_list_fragment_listview"
+        android:divider="@null"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     
