--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,13 +4,14 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
+    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
     </style>
+    
+    
+    <style name="RTActionBar" parent="@style/Widget.AppCompat.ActionBar">
+        <item name="android:background">#1D2935</item>
+    </style>
+    
 	
     <style name="AppButton"  parent="@android:style/Widget.Button">
         <item name="android:background">@drawable/app_button_selector</item>
