--- a/res/layout/timetable_fragment.xml
+++ b/res/layout/timetable_fragment.xml
@@ -37,6 +37,13 @@
 			 android:padding="10dp"/>
         
     </RelativeLayout>
+    
+	<android.support.v4.view.ViewPager
+	    android:id="@+id/lesson_view_pager"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent">
+	    
+	</android.support.v4.view.ViewPager>
 
     <ListView
         android:id="@+id/lesson_list"
