--- a/res/layout/lesson_list_fragment.xml
+++ b/res/layout/lesson_list_fragment.xml
@@ -10,5 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </ListView>
+    
+    <RelativeLayout 
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
+        
+        <TextView 
+            android:layout_centerInParent="true"
+            android:text="@string/lesson_empty_view"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"/>
+            
+    </RelativeLayout>
 
 </LinearLayout>
