techecr lesson table problem

--- a/res/layout/lesson_list_fragment.xml
+++ b/res/layout/lesson_list_fragment.xml
@@ -8,10 +8,11 @@
     <ListView
         android:id="@+id/lesson_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent" >
     </ListView>
     
     <RelativeLayout 
+        android:id="@+id/lesson_list_empty_view"
         android:layout_height="match_parent"
         android:layout_width="match_parent">
         
