--- a/res/layout/home_work_list_divier.xml
+++ b/res/layout/home_work_list_divier.xml
@@ -7,6 +7,8 @@
 
     <RelativeLayout
         android:id="@+id/RelativeLayout1"
+        android:background="@color/theme_blue"
+        
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp" >
@@ -17,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:textColor="@color/theme_blue"
+            android:textColor="@color/theme_green"
             android:textSize="15sp"
             android:textStyle="bold" />
 
@@ -27,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
 			android:layout_alignParentRight="true"
-			android:textColor="@color/theme_blue"
+			android:textColor="@color/theme_green"
             android:textSize="15sp"
             android:textStyle="bold"/>
     </RelativeLayout>
