--- a/res/layout/homework_list_fragment.xml
+++ b/res/layout/homework_list_fragment.xml
@@ -14,12 +14,20 @@
         android:id="@+id/hw_empty_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        
+        <ProgressBar 
+            android:layout_centerInParent="true"
+            android:id="@+id/hw_empty_progress"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"/>
 
         <TextView
+            android:id="@+id/hw_empty_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:visibility="gone"
             android:text="@string/hw_empty" />
         
     </RelativeLayout>
