--- a/res/layout/simple_list_fragment.xml
+++ b/res/layout/simple_list_fragment.xml
@@ -4,10 +4,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <se.emilsjolander.stickylistheaders.StickyListHeadersListView 
-		android:id="@+id/list_fragment_listview"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"/>
+    <se.emilsjolander.stickylistheaders.StickyListHeadersListView
+        android:id="@+id/list_fragment_listview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    
+    <RelativeLayout 
+        android:id="@+id/list_fragment_empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        
+        <ProgressBar 
+            android:id="@+id/list_fragment_empty_view_progress"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        
+        <TextView 
+            android:id="@+id/list_fragment_empty_view_message"
+            android:layout_centerInParent="true"
+            android:text="@string/teacher_list_empty_message"
+            android:visibility="gone"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"/>
+        
+    </RelativeLayout>
     
 
 </LinearLayout>
