home work list rebase on cursor

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -7,4 +7,6 @@
 	<color name="red">#FF0000</color>
 	<color name="lesson_free">#808080</color>
 	<color name="drawer_background">#303030</color>
+	<color name="lesson_list_backgroud">#D8D8D8</color>
+	<color name="rt_selector_pressed">#2ECC71CC</color>
 </resources>
