--- a/res/layout/lesson_list_element.xml
+++ b/res/layout/lesson_list_element.xml
@@ -1,89 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp" >
 
-    <LinearLayout 
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="vertical"
-	    android:padding="10dp" >
-	    
-        <include layout="@layout/lesson_list_divier"/>
-	
-	    <LinearLayout
-	        android:id="@+id/lesson_room_container"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content" >
-	
-	        <ImageView
-	            android:layout_width="21dp"
-	            android:layout_height="21dp"
-	            android:layout_weight="0"
-	            android:layout_gravity="center_vertical"
-	            android:src="@drawable/ic_place" />
-	
-	        <TextView
-	            android:id="@+id/lesson_room"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_weight="0.3"
-	            android:padding="3dp"
-	            android:layout_gravity="center_vertical"
-	            android:text="Д412"
-	            android:textSize="17dp" />
-	
-	    </LinearLayout>
-	
-	    <LinearLayout
-	        android:id="@+id/lesson_teacher_container"
-	        
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content" >
-	
-	        <ImageView
-	            android:layout_width="21dp"
-	            android:layout_height="21dp"
-	            android:layout_weight="0"
-	            android:layout_gravity="center_vertical"
-	            android:src="@drawable/ic_person" />
-	
-	        <TextView
-	            android:id="@+id/lesson_teacher"
-	            android:layout_width="200dp"
-	            android:layout_height="wrap_content"
-	            android:layout_weight="1"
-	            android:padding="3dp"
-	            android:layout_gravity="center_vertical"
-	            android:text="Жуков В.В."
-	            android:textSize="17dp" />
-	
-	    </LinearLayout>
-	
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content" >
-	
-	        <ImageView
-	            android:layout_width="21dp"
-	            android:layout_height="21dp"
-	            android:layout_gravity="center_vertical"
-	            android:layout_weight="0"
-	            android:src="@drawable/ic_pencil" />
-	
-	        <TextView
-	            android:id="@+id/lesson_title"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_weight="1"
-	            android:layout_gravity="center_vertical"
-	            android:padding="3dp"
-	            android:text="Операционные системы"
-	            android:textSize="17dp" />
-	
-	    </LinearLayout>
-	
-	</LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/white_background"
+            android:orientation="vertical"
+            android:padding="10dp" >
+
+            <include layout="@layout/lesson_list_divier" />
+
+            <LinearLayout
+                android:id="@+id/lesson_room_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <ImageView
+                    android:layout_width="21dp"
+                    android:layout_height="21dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="0"
+                    android:src="@drawable/ic_place" />
+
+                <TextView
+                    android:id="@+id/lesson_room"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="0.3"
+                    android:padding="3dp"
+                    android:text="Д412"
+                    android:textSize="17dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/lesson_teacher_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <ImageView
+                    android:layout_width="21dp"
+                    android:layout_height="21dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="0"
+                    android:src="@drawable/ic_person" />
+
+                <TextView
+                    android:id="@+id/lesson_teacher"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:padding="3dp"
+                    android:text="Жуков В.В."
+                    android:textSize="17dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <ImageView
+                    android:layout_width="21dp"
+                    android:layout_height="21dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="0"
+                    android:src="@drawable/ic_pencil" />
+
+                <TextView
+                    android:id="@+id/lesson_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:padding="3dp"
+                    android:text="Операционные системы"
+                    android:textSize="17dp" />
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/lesson_list_element_homework_indicator"
