--- a/res/layout/lesson_list_fragment.xml
+++ b/res/layout/lesson_list_fragment.xml
@@ -2,11 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lesson_list_backgroud"
     android:orientation="vertical" >
 
 
     <ListView
         android:id="@+id/lesson_list"
+        android:divider="@null"
+        android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
     </ListView>
