--- a/res/layout/homework_fragment.xml
+++ b/res/layout/homework_fragment.xml
@@ -14,19 +14,17 @@
 
         <requestFocus />
     </EditText>
-
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone" >
+        android:orientation="vertical">
 
         <GridView
             android:id="@+id/home_work_grid_view"
+			android:numColumns="2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            
-            android:numColumns="2" >
+            android:layout_height="wrap_content" >
         </GridView>
 
     </LinearLayout>
