--- a/res/layout/setting_fragment.xml
+++ b/res/layout/setting_fragment.xml
@@ -3,75 +3,90 @@
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:padding="10dp" >
+    android:padding="15dp" >
 
     <TextView 
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/setting_staff"
         android:textSize="17sp"
-        android:layout_gravity="center_horizontal" 
+        android:layout_gravity="left" 
         android:layout_marginBottom="5dp"/>
     
-    <LinearLayout
+    <View 
+        android:background="@color/theme_blue"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"/>
+
+    <TextView
+        android:id="@+id/setting_facultet_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/theme_blue"
-        android:orientation="vertical" >
-        
-         <TextView 
-            android:id="@+id/setting_facultet_title"
-            android:layout_height="wrap_content"
-			android:layout_width="match_parent"
-			android:textSize="17sp"
-			android:layout_margin="5dp"
-			android:gravity="center_horizontal"
-			android:textColor="@color/white" />
-        
-        <TextView 
-            android:id="@+id/setting_group_title"
-            android:layout_height="wrap_content"
-			android:layout_width="match_parent"
-			android:textSize="17sp"
-			android:layout_margin="5dp"
-			android:gravity="center_horizontal"
-			
-			android:textColor="@color/white" />
-        
-    </LinearLayout>
+        android:layout_margin="5dp"
+        android:gravity="left|center_vertical"
+		android:textColor="@color/theme_blue"
+        android:textSize="17sp" />
+    <TextView
+        android:id="@+id/setting_group_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:gravity="left|center_vertical"
+		android:textColor="@color/theme_blue"
+        android:textSize="17sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/theme_blue" />
     
      <Button
         android:id="@+id/setting_about"
-        style="@style/AppButton"
+       	android:background="@drawable/base_selector"
+		android:textColor="@color/theme_blue"
+		android:gravity="left|center_vertical"
+		android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:text="@string/about" />
 
     <TextView
-        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="17sp"
         android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
+        android:layout_gravity="left"
+        android:gravity="left"
         android:text="Расписание" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/theme_blue" />
     
     <Button
         android:id="@+id/setting_full_time_button"
-        style="@style/AppButton"
+       	android:background="@drawable/base_selector"
+		android:textColor="@color/theme_blue"
+		android:gravity="left|center_vertical"
+		android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:text="@string/setting_full_time_button" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/theme_blue" />
 
     <Button
         android:id="@+id/setting_logout_button"
-        style="@style/AppButton"
+       	android:background="@drawable/base_selector"
+		android:textColor="@color/theme_blue"
+		android:gravity="left|center_vertical"
+		android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:text="@string/setting_logout" />
 
 </LinearLayout>
