group list is sticky now

--- a/app/src/main/res/layout/group_list_fargment.xml
+++ b/app/src/main/res/layout/group_list_fargment.xml
@@ -6,6 +6,14 @@
     android:orientation="vertical" >
 
 
+    <LinearLayout
+        android:id="@+id/group_list_container"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/groupList"
