--- a/app/src/main/res/layout/progress_empty_view.xml
+++ b/app/src/main/res/layout/progress_empty_view.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:background="#FFFFFF"
-             android:clickable="true"
-             android:orientation="vertical">
+    android:id="@+id/empty_progress_view"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:clickable="true"
+    android:orientation="vertical">
 
     <ProgressBar
         android:id="@+id/loading_progress_bar"
