--- a/app/src/main/res/layout/lesson_list_element.xml
+++ b/app/src/main/res/layout/lesson_list_element.xml
@@ -3,11 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="5dp"
+    android:background="@drawable/transparet_selector"
     android:paddingTop="5dp" >
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/transparet_selector"
         android:orientation="vertical" >
 
         <LinearLayout
@@ -15,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:background="@drawable/white_background"
+            android:background="@drawable/card"
             android:orientation="vertical"
             android:padding="10dp" >
 
