--- a/app/src/main/res/layout/single_lesson_fragment.xml
+++ b/app/src/main/res/layout/single_lesson_fragment.xml
@@ -1,73 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/bg_grey"
     android:layout_width="match_parent"
-    android:background="@color/theme_blue"
-    
     android:layout_height="match_parent" >
 
     <LinearLayout
+        android:layout_margin="7dp"
+        android:background="@drawable/card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/theme_blue"
         android:orientation="vertical"
         android:paddingBottom="20dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="20dp" >
-	
+
 	    <TextView
 	        android:id="@+id/single_lesson_title"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_gravity="center_horizontal"
-	        android:text="Информатика"
-	        android:gravity="center_horizontal"
-	        android:textColor="@color/theme_green"
+            android:text="Информатика"
+            android:textColor="@color/theme_blue"
 	        android:textSize="25sp"
+            android:layout_marginBottom="10dp"
 	        android:textStyle="bold" />
-	
-	    <TextView
-	        android:id="@+id/single_lesson_time"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_gravity="center_horizontal"
-	        android:gravity="center_horizontal"
-	        android:layout_marginTop="10dp"
-	        android:textColor="@color/theme_green"
-	        android:text="8.20 - 9.50"
-	        android:textSize="17sp" />
-	
-	    <LinearLayout
-	        android:id="@+id/single_information_container"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:layout_marginBottom="20dp"
-	        android:layout_marginTop="10dp"
-	        android:orientation="vertical" >
-	
-	</LinearLayout>
-	
-	   <TextView
-	       	android:id="@+id/single_lesson_homework_label"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_gravity="center_horizontal"
-	        android:text="@string/home_work_caption"
-	        android:gravity="center_horizontal"
-	        android:textColor="@color/theme_green"
-	        android:textSize="25sp"
-	        android:textStyle="bold" />
-	
-	    <LinearLayout
-	        android:id="@+id/home_work_container"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:background="@android:color/white"
-	        android:orientation="vertical" >
-	
-	    </LinearLayout>
-	
-	</LinearLayout>
+
+        <View
+            android:background="@color/theme_blue"
+            android:layout_width="match_parent"
+            android:layout_height="1px"/>
+
+
+        <LinearLayout
+            android:gravity="center_vertical"
+            android:padding="7dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_marginRight="7dp"
+                android:src="@drawable/time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/single_lesson_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="8.20 - 9.50"
+                android:textSize="19sp" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_marginLeft="45dp"
+            android:background="@color/theme_blue"
+            android:layout_width="match_parent"
+            android:layout_height="1px"/>
+
+
+        <LinearLayout
+            android:padding="7dp"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_marginRight="7dp"
+                android:src="@drawable/room"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/lesson_room"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Д410"
+                android:textSize="20sp" />
+        </LinearLayout>
+        <View
+            android:layout_marginLeft="45dp"
+            android:background="@color/theme_blue"
+            android:layout_width="match_parent"
+            android:layout_height="1px"/>
+
+        <LinearLayout
+            android:padding="7dp"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_marginRight="7dp"
+                android:src="@drawable/literature"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/single_information_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Практика"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <View
+            android:layout_marginLeft="45dp"
+            android:background="@color/theme_blue"
+            android:layout_width="match_parent"
+            android:layout_height="1px"/>
+
+
+        <LinearLayout
+            android:padding="7dp"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_marginRight="7dp"
+                android:src="@drawable/contacts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/single_information_teacher"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Жуков В.В."
+                android:textSize="20sp" />
+
+        </LinearLayout>
+
+
+
+
+    </LinearLayout>
     
 </ScrollView>
 
