--- a/app/src/main/res/layout/home_work_list_element.xml
+++ b/app/src/main/res/layout/home_work_list_element.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="3dp"
-    android:background="@drawable/calendar_list_selector"
+    android:background="@android:color/transparent"
     android:orientation="vertical">
 
     <LinearLayout
+        android:layout_margin="7dp"
+        android:background="@drawable/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="3dp" >
@@ -23,12 +24,10 @@
             android:id="@+id/home_work_list_element_check_box"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:focusable="false"
             android:layout_weight="0" />
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/theme_blue" />
+
 
 </LinearLayout>
