--- a/app/src/main/res/menu/teach.xml
+++ b/app/src/main/res/menu/teach.xml
@@ -4,7 +4,7 @@
       
     <item android:id="@+id/action_search"
     	android:title="@string/search_view_title"
-        android:icon="@drawable/action_search"
+        android:icon="@drawable/ic_action_search"
         sabd:showAsAction="always|collapseActionView"
         sabd:actionViewClass="android.support.v7.widget.SearchView" />
     
