--- a/app/src/main/res/layout/home_work_list_element.xml
+++ b/app/src/main/res/layout/home_work_list_element.xml
@@ -10,15 +10,47 @@
         android:background="@drawable/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="3dp" >
+        android:padding="7dp" >
+
 
         <TextView
             android:id="@+id/home_work_list_element_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TextView"
+
+            android:text="Ну почитать там че нить"
             android:textSize="17sp" />
+
+        <RelativeLayout
+            android:id="@+id/home_work_list_element_image_container"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:scaleType="centerCrop"
+                android:src="@drawable/login"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/home_work_image_preview" />
+
+            <TextView
+                android:id="@+id/home_work_list_element_photo_count"
+                android:background="@color/theme_blue_with_alpha"
+                android:gravity="center"
+                android:layout_centerInParent="true"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:text="10 фото"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignBottom="@+id/home_work_image_preview"
+                android:layout_alignRight="@+id/home_work_image_preview"
+                android:layout_alignEnd="@+id/home_work_image_preview"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
 
         <CheckBox
             android:id="@+id/home_work_list_element_check_box"
@@ -27,7 +59,6 @@
             android:focusable="false"
             android:layout_weight="0" />
     </LinearLayout>
-
 
 
 </LinearLayout>
