--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,10 @@
 
 
 	<color name="theme_blue">#34495E</color>
-	<color name="bg_grey">#E5E5E5</color>
+
+    <color name="theme_blue_with_alpha">#7734495E</color>
+
+    <color name="bg_grey">#E5E5E5</color>
 	<color name="red">#FF0000</color>
 	<color name="lesson_free">#808080</color>
 	<color name="drawer_background">#303030</color>
