--- a/app/src/main/res/layout/home_work_list_divier.xml
+++ b/app/src/main/res/layout/home_work_list_divier.xml
@@ -2,36 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
     android:orientation="vertical" >
 
-    <RelativeLayout
-        android:id="@+id/RelativeLayout1"
-        android:background="@color/theme_blue"
-        
+
+    <TextView
+        android:id="@+id/divider_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp" >
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/theme_blue"
+        android:textSize="15sp"
+        android:padding="5dp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/divider_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:textColor="@color/theme_green"
-            android:textSize="15sp"
-            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/lesson_divider_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-			android:layout_alignParentRight="true"
-			android:textColor="@color/theme_green"
-            android:textSize="15sp"
-            android:textStyle="bold"/>
-    </RelativeLayout>
 
 </LinearLayout>
